--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,6 @@ body:hover {
     background-position-x: center;
     background-position-y: center;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
