--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <!-- Nav tabs -->
-<div class="bg">
-    <app-navbar></app-navbar>
-    <!-- <router-outlet></router-outlet> -->
-</div>
-<app-home ngsReveal></app-home>
-<app-about-us ngsReveal></app-about-us>
-<app-services ngsReveal></app-services>
-<app-projects ngsReveal></app-projects>
-<app-facts></app-facts>
-<app-technologies></app-technologies>
-<app-contact-us></app-contact-us>
-<app-footer></app-footer>
+
+<app-navbar></app-navbar>
+<!-- <router-outlet></router-outlet> -->
+
+
+<app-home [ngsReveal]="{ reset : true, duration: 1000}"></app-home>
+<app-about-us [ngsReveal]="{ reset : true, duration: 1000}"></app-about-us>
+<app-services [ngsReveal]="{ reset : true, duration: 1000}"></app-services>
+<app-projects [ngsReveal]="{ reset : true, duration: 1000}"></app-projects>
+<app-facts [ngsReveal]="{ reset : true, duration: 1000}"></app-facts>
+<app-technologies [ngsReveal]="{ reset : true, duration: 1000}"></app-technologies>
+<app-contact-us [ngsReveal]="{ reset : true, duration: 1000}"></app-contact-us>
+<app-footer [ngsReveal]="{ reset : true, duration: 1000}"></app-footer>
