--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- Nav tabs -->
+<material-slide-toggle 
+  >
+</material-slide-toggle>
 <div class="bg">
     <app-navbar></app-navbar>
     <!-- <router-outlet></router-outlet> -->
