--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,6 +28,13 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " (click)="toContact();show();">Contact Us</a>
+                          
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " (click)=" mode.toMode()">Click
+                                <material-slide-toggle ></material-slide-toggle>
+                            </a>
+                          
                         </li>
                     </ul>
                 </div>
