--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -28,6 +28,7 @@ img {
 .container .card {
     position: relative;
     border-radius: 10px;
+    margin: 8px;
     background-color:rgba(0, 255, 213, 0.863);
 }
 
