--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,58 +1,34 @@
-<div class="bv">
-    <div class="container flex-wrap justify-content-center" >
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <div class="icon">
-                        <img src="assets/images/blockchain.png">
-                    </div>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <h3>
-                        Blockchain
-                    </h3>
-                    <p style="font-size: 13px;">Blockchain is a shared, immutable ledger that 
-                        facilitates the process of recording transactions and tracking assets in 
-                        a business network. An asset can be tangible (a house, car, cash, land) or
-                         intangible (intellectual property, patents, copyrights, branding).</p>
-                </div>
-            </div>
+<div class="bh">
+    <div class = "container flex-wrap justify-content">
+      <div class = card>
+        <div class = image>
+          <img href = "#" src ="https://i.pinimg.com/originals/a4/7b/a5/a47ba59b4a353e0928ef0551ca44f980.jpg">
         </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <div class="icon">
-                       <img src="assets/images/ai.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <h3>
-                        <a href="https://twitter.com/AdamDipinto" target="_blank">@AdamDipinto</a>
-                    </h3>
-                    <p>This is where I read news and network with different social groups.</p>
-                </div>
-            </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>    It’s a peer-to-peer technology that enables transfer of value and assets in a decentralised fashion, eliminating the need for central authorities and intermediaries.Blockchain, the technology behind bitcoin, has made it possible to operate in a trustless environment using the power of distributed computers, cryptography and consensus algorithms.
+            Blockchain technology goes beyond payment applications to revolutionise any industry that require trust, transfer of assets and involve a business network.
+            Blockchain generate value by removing friction and streamlining processes, eliminating the need for costly audits.
+            .</p>
         </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <div class="icon">
-                     <img src="assets/images/iot.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <h3>
-                        <a href="https://github.com/atom888" target="_blank">atom888</a>
-                    </h3>
-                    <p>This is where I share code and work on projects.</p>
-                </div>
-            </div>
+      </div>
+      <div class = card>
+        <div class = image>
+          <img href = "#" src ="https://i.pinimg.com/originals/a4/7b/a5/a47ba59b4a353e0928ef0551ca44f980.jpg">
         </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div>    
+      <div class = card>
+        <div class = image>
+          <img href = "#" src ="https://i.pinimg.com/originals/a4/7b/a5/a47ba59b4a353e0928ef0551ca44f980.jpg">
+        </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div>        
     </div>
 </div>
