--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,122 +1,80 @@
-.bv {
-    margin: 0;
+* { 
+    margin : 0;
     padding: 0;
-    min-height: 100vh;
-    background: #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;   
-    font-family: sans-serif;
-    background-color: #f1f1f1; 
-}
-img {
-    display: block;
-    margin-top: 10%;
-    margin-left: auto;
-    margin-right: auto;
+    box-sizing : border-box;
+    font-familly : "Poppins", sans-serif;
+  }
+  .bh {
+    display : flex;
+    align-items : center;
+    justify-content : center;  
   
     
   }
-.container {
-    width: 1000px;
-    position: relative;
-    display: flex;
-    background-color: rgba(0, 255, 213, 0.863);;
-    justify-content: space-between;
-}
-
-.container .card {
-    position: relative;
-    border-radius: 10px;
-    margin: 8px;
-    background-color:rgba(0, 255, 213, 0.863);
-}
-
-.container .card .icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 255, 213, 0.863);
-    transition: 0.7s;
-    z-index: 1;
-}
-
-
-
-
-
-
-
-.container .card .face {
-    width: 300px;
-    height: 200px;
-    transition: 0.5s;
+  
+  .container {
+    position : relative;
+    width : 1100px;
+    display : flex;
+    align-items : center;
+    justify-content : center;
+    flex-warp : warp;
     
-}
-
-.container .card .face.face1 {
+    padding : 30px;  
+  }
+  
+  .container .card {
     position: relative;
-    background: #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    transform: translateY(100px);
-}
-
-.container .card:hover .face.face1{
-    background: #ff0057;
-    transform: translateY(0px);
-}
-
-.container .card .face.face1 .content {
-    opacity: 1;
-    transition: 0.5s;
-}
-
-.container .card:hover .face.face1 .content {
-    opacity: 1;
-}
-
-.container .card .face.face1 .content i{
-    max-width: 100px;
-}
-
-.container .card .face.face2 {
-    position: relative;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-    transform: translateY(-100px);
-}
-
-.container .card:hover .face.face2{
-    transform: translateY(0);
-}
-
-.container .card .face.face2 .content p {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    color: #414141;
-}
-
-.container .card .face.face2 .content h3 {
-    margin: 0 0 10px 0;
-    padding: 0;
-    color: #fff;
-    font-size: 24px;
-    text-align: center;
-    color: #414141;
-} 
-
-.container a {
-    text-decoration: none;
-    color: #414141;
-}
+    max-width : 300px;
+    height : 215px;  
+    background-color : #fff;
+    margin : 30px 10px;
+    padding : 20px 15px;
+    
+    display : flex;
+    flex-direction : column;
+    box-shadow : 0 5px 20px rgba(0,0,0,0.5);
+    transition : 0.3s ease-in-out;
+    border-radius : 15px;
+  }
+  .container .card:hover {
+    height : 700px;    
+  }
+  
+  
+  .container .card .image {
+    position : relative;
+    width : 260px;
+    height : 260px;
+    
+    top : -30%;
+    left: 8px;
+    box-shadow : 0 5px 20px rgba(0,0,0,0.2);
+    z-index : 1;
+  }
+  
+  .container .card .image img {
+    max-width : 100%;
+    border-radius : 15px;
+  }
+  
+  .container .card .content {
+    position : relative;
+    top : -140px;
+    padding : 10px 15px;
+    color : #111;
+    text-align : center;
+    
+    visibility : hidden;
+    opacity : 0;
+    transition : 0.3s ease-in-out;
+      
+  }
+  
+  .container .card:hover .content {
+     margin-top : 30px;
+     visibility : visible;
+     opacity : 1;
+     transition-delay: 0.2s;
+    
+  }
