--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -18,7 +18,7 @@
     display : flex;
     align-items : center;
     justify-content : center;
-    flex-warp : warp;
+    flex-wrap : wrap;
     
     padding : 30px;  
   }
