--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -2,12 +2,15 @@
     margin : 0;
     padding: 0;
     box-sizing : border-box;
-    font-familly : "Poppins", sans-serif;
+    font-family : "Poppins", sans-serif;
+    
+  
   }
   .bh {
     display : flex;
     align-items : center;
-    justify-content : center;  
+    justify-content : center;
+  
   
     
   }
