--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -2,7 +2,7 @@
     <div class = "container flex-wrap justify-content">
       <div class = card>
         <div class = image>
-          <img href = "#" src ="https://i.pinimg.com/originals/a4/7b/a5/a47ba59b4a353e0928ef0551ca44f980.jpg">
+          <img href = "#" src ="assets/images/blockchain.png">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -14,7 +14,7 @@
       </div>
       <div class = card>
         <div class = image>
-          <img href = "#" src ="https://i.pinimg.com/originals/a4/7b/a5/a47ba59b4a353e0928ef0551ca44f980.jpg">
+          <img href = "#" src ="assets/images/ai.png">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -23,7 +23,7 @@
       </div>    
       <div class = card>
         <div class = image>
-          <img href = "#" src ="https://i.pinimg.com/originals/a4/7b/a5/a47ba59b4a353e0928ef0551ca44f980.jpg">
+          <img href = "#" src ="assets/images/iot.png">
         </div>
         <div class = content>
           <h3>This is content</h3>
