--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -28,7 +28,7 @@
   
   .container .card {
     position: relative;
-    max-width : 300px;
+    width : 300px;
     height : 215px;  
     background-color : #fff;
     margin : 30px 10px;
@@ -41,18 +41,20 @@
     border-radius : 15px;
   }
   .container .card:hover {
-    height : 700px;    
+    height : 600px;
+    width: 370px;
+   
   }
   
   
   .container .card .image {
     position : relative;
-    width : 260px;
-    height : 260px;
+    width : 270px;
+    height : 270px;
     
-    top : -30%;
-    left: 8px;
-    box-shadow : 0 5px 20px rgba(0,0,0,0.2);
+    top : 10%;
+    left: 70px;
+    
     z-index : 1;
   }
   
@@ -80,4 +82,9 @@
      opacity : 1;
      transition-delay: 0.2s;
     
+  }
+  .container .card:hover .image{
+
+    top : -20%;
+    left: 100px;
   }
