--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,3 @@
 <div id="footer" class="container-fluid">
-
-    <div class="row ">
-        <div class="col-lg-12">
-            <p>Copyright © 2022 <a>  Ir4lab.</a>
-        </div>
-    </div>
+    <p>Copyright © 2022 <a>  Ir4lab.</a></p>
 </div>
