--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,17 +1,17 @@
 $prim :#151F3E;
 $sec:#00a2e2;
-footer p {
+#footerp {
+    padding: 10px;
     text-align: center;
-    margin: 30px 0px;
     color: #fff !important;
 }
 
-footer p a {
+#footer p a {
     color: #33ccc5;
     transition: all .5s;
 }
 
-footer p a:hover {
+#footer p a:hover {
     color: #4771cb;
 }
 
@@ -20,6 +20,5 @@ footer p a:hover {
     position: relative;
     bottom: 0;
     z-index: 100;
-    height: 80px !important;
     background-color: $prim;
 }
