--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -2,7 +2,7 @@
 		
 	<div class="projcard projcard-blue">
 		<div class="projcard-innerbox">
-			<img class="projcard-img" src="https://picsum.photos/800/600?image=1041" />
+			<img class="projcard-img" src="assets/images/ok.jpg" />
 			<div class="projcard-textbox">
 				<div class="projcard-title"> Blockchain</div>
 		
@@ -18,7 +18,7 @@
 	
 	<div class="projcard projcard-green">
 		<div class="projcard-innerbox">
-			<img class="projcard-img" src="https://picsum.photos/800/600?image=1039" />
+			<img class="projcard-img" src="assets/images/ol.jpg"/>
 			<div class="projcard-textbox">
 				<div class="projcard-title">AI</div>
 			
@@ -32,7 +32,7 @@
 	
 	<div class="projcard projcard-customcolor" style="--projcard-color: #F5AF41;">
 		<div class="projcard-innerbox">
-			<img class="projcard-img" src="https://picsum.photos/800/600?image=943" />
+			<img class="projcard-img" src="assets/images/cv.jpg" />
 			<div class="projcard-textbox">
 				<div class="projcard-title" > IOT</div>
 				
